syntax = "proto3";

package UserAndGameServer;

enum MsgType {
	INVALID_MSG_TYPE = 0;
	Req = 1;
	Ans = 2;
	Noti = 3;
	Err = 4;
}

enum Protocol {
	INVALID_PROTOCOL = 0;
	ErrInfo = 1;
	PublicKey = 2;
	Connect = 3;
	TestMsg = 4;
}


message NotiErrInfo {
	uint64 err_no = 1;
	string err_desc = 2;
}

message ReqPublicKey{
	string device_id = 1;
}

message AnsPublicKey {
	string public_key = 1;
}

message ReqConnect {
	string device_id = 1;
}

message AnsConnect {
	bool is_success = 1;
	string session_id = 2;
}

message ReqTestMsg {
	string msg = 1;
}

message AnsTestMsg {
	string msg = 1;
}